transformControls showX false

--- a/examples/webgl_animation_skinning_ik.html
+++ b/examples/webgl_animation_skinning_ik.html
@@ -122,6 +122,7 @@
 
 			transformControls = new TransformControls( camera, renderer.domElement );
 			transformControls.size = .75;
+			transformControls.showX = false;
 			transformControls.space = 'world';
 			transformControls.attach( OOI.target_hand_l );
 			scene.add( transformControls );
