--- a/examples/webgl_animation_skinning_ik.html
+++ b/examples/webgl_animation_skinning_ik.html
@@ -9,14 +9,14 @@
 		<style>
 		body {color:white;}
 		#info a {
-			color:inherit;
+			color:#4d6675;
 		}
 		</style>
 	</head>
 	<body>
 		<div id="info">
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - webgl - inverse kinematics<br />
-			Character Model: <a href="https://assetstore.unity.com/packages/3d/characters/humanoids/humans/kira-lowpoly-character-100303" target="_blank" rel="noopener">Kira</a>, (see <a href="https://abernier.name/three.js/examples/webgl_esher.html" target="_blank" rel="noopener">full-experiment</a>)
+			Character model by <a href="https://assetstore.unity.com/packages/3d/characters/humanoids/humans/kira-lowpoly-character-100303" target="_blank" rel="noopener">Aki</a>, furnitures from <a href="https://poly.pizza" target="_blank" rel="noopener">poly.pizza</a>, scene by <a href="https://abernier.name/three.js/examples/webgl_esher.html" target="_blank" rel="noopener">abernier</a>. CC.
 		</div>
 
 		<!-- Import maps polyfill -->
@@ -103,7 +103,7 @@
 				if ( n.name === 'target_hand_l' ) OOI.target_hand_l = n;
 
 				if ( n.name === 'boule' ) OOI.sphere = n;
-				if ( n.name === 'Kira_Shirt' ) OOI.kira = n;
+				if ( n.name === 'Kira_Shirt_left' ) OOI.kira = n;
 
 				if ( n.isMesh ) n.frustumCulled = false;
 
@@ -133,16 +133,16 @@
 			OOI.kira.add( OOI.kira.skeleton.bones[ 0 ] );
 			const iks = [
 				{
-					target: 25, // "target_hand_l"
-					effector: 9, // "hand_l"
+					target: 22, // "target_hand_l"
+					effector: 6, // "hand_l"
 					links: [
 						{
-							index: 8, // "lowerarm_l"
+							index: 5, // "lowerarm_l"
 							rotationMin: new THREE.Vector3( 1.2, - 1.8, - .4 ),
 							rotationMax: new THREE.Vector3( 1.7, - 1.1, .3 )
 						},
 						{
-							index: 7, // "Upperarm_l"
+							index: 4, // "Upperarm_l"
 							rotationMin: new THREE.Vector3( 0.1, - 0.7, - 1.8 ),
 							rotationMax: new THREE.Vector3( 1.1, 0, - 1.4 )
 						},
