Added triplanarTexture() in webgpu_materials example

--- a/examples/webgpu_materials.html
+++ b/examples/webgpu_materials.html
@@ -34,7 +34,7 @@
 
 			import { TeapotGeometry } from 'three/addons/geometries/TeapotGeometry.js';
 
-			import { ShaderNode, vec3, dot } from 'three/nodes';
+			import { ShaderNode, vec3, dot, triplanarTexture } from 'three/nodes';
 
 			import Stats from 'three/addons/libs/stats.module.js';
 
@@ -175,6 +175,11 @@
 
 				material = new Nodes.MeshBasicNodeMaterial();
 				material.colorNode = getWGSLTextureSample.call( { tex: textureNode, tex_sampler: textureNode, uv: new Nodes.UVNode() } );
+				materials.push( material );
+
+				// Triplanar Texture Mapping
+				material = new Nodes.MeshBasicNodeMaterial();
+				material.colorNode = triplanarTexture( new Nodes.TextureNode( texture ) );
 				materials.push( material );
 
 				//
