update roll-over helpers position

--- a/examples/webgl_interactive_voxelpainter.html
+++ b/examples/webgl_interactive_voxelpainter.html
@@ -184,6 +184,10 @@
 						objects.push( voxel );
 
 					}
+					
+					// update roll-over helpers position
+					
+					onPointerMove(event);
 
 					render();
 
