--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				<!-- June 2018 -->
 				<a href="https://heraclosgame.com/" target="_blank" rel="noopener"><img src="files/projects/heraclos.png" loading="lazy"/></a>
 				<a href="http://goinghome.302chanwoo.com/" target="_blank" rel="noopener"><img src="files/projects/goinghome.png" loading="lazy"/></a>
-				<a href="http://oatthegoat.co.nz/" target="_blank" rel="noopener"><img src="files/projects/oatthegoat.png" loading="lazy"/></a>
+				<!-- <a href="http://oatthegoat.co.nz/" target="_blank" rel="noopener"><img src="files/projects/oatthegoat.png" loading="lazy"/></a> -->
 				<!-- May 2018 -->
 				<a href="http://mathis-biabiany.fr/" target="_blank" rel="noopener"><img src="files/projects/mathis-biabiany.png" loading="lazy"/></a>
 				<!-- <a href="https://worlddraw.withgoogle.com/" target="_blank" rel="noopener"><img src="files/projects/worlddraw.png" loading="lazy"/></a> -->
