--- a/examples/webgl_renderer_pathtracer.html
+++ b/examples/webgl_renderer_pathtracer.html
@@ -8,16 +8,48 @@
 		<style>
 			body {
 				color: #444;
+				background-color: white;
 			}
+
 			a {
 				color: #08f;
+			}
+
+			#samples-container {
+				position: absolute;
+				bottom: 0;
+				right: 0;
+				font-family: 'Courier New', Courier, monospace;
+				color: white;
+				pointer-events: none;
+			}
+
+			#samples {
+
+				background-color: rgba( 0.0, 0.0, 0.0, 0.75 );
+				padding: 5px;
+				display: inline-block;
+
+			}
+
+			.checkerboard {
+				background-image:
+					linear-gradient(45deg, #ddd 25%, transparent 25%),
+					linear-gradient(-45deg, #ddd 25%, transparent 25%),
+					linear-gradient(45deg, transparent 75%, #ddd 75%),
+					linear-gradient(-45deg, transparent 75%, #ddd 75%);
+				background-size: 20px 20px;
+				background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
 			}
 		</style>
 	</head>
 
-	<body>
+	<body class="checkerboard">
 		<div id="info">
 		<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - LDrawLoader
+		</div>
+		<div id="samples-container">
+			<div id="samples">--</div>
 		</div>
 
 		<!-- Import maps polyfill -->
@@ -52,7 +84,7 @@
 
 			import { PhysicalPathTracingMaterial, PathTracingRenderer, MaterialReducer, BlurredEnvMapGenerator, PathTracingSceneGenerator } from 'three-gpu-pathtracer';
 
-			let container, progressBarDiv;
+			let container, progressBarDiv, samplesEl;
 			let camera, scene, renderer, controls, gui;
 			let pathTracer, sceneInfo, fsQuad;
 			let delaySamples = 0;
@@ -63,7 +95,14 @@
 				tiles: 2,
 				transparentBackground: false,
 				resolutionScale: 1 / window.devicePixelRatio,
-				download: () => {},
+				download: () => {
+
+					var link = document.createElement('a');
+					link.download = 'filename.png';
+					link.href = renderer.domElement.toDataURL().replace("image/png", "image/octet-stream");
+					link.click();
+
+				},
 			};
 
 			init();
@@ -71,19 +110,19 @@
 
 			function init() {
 
-				container = document.createElement( 'div' );
-				document.body.appendChild( container );
+				samplesEl = document.getElementById( 'samples' );
 
 				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 10000 );
 				camera.position.set( 150, 200, 250 );
 
 				// initialize the renderer
-				renderer = new THREE.WebGLRenderer( { antialias: true } );
+				renderer = new THREE.WebGLRenderer( { antialias: true, preserveDrawingBuffer: true, premultipliedAlpha: true } );
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				renderer.outputEncoding = THREE.sRGBEncoding;
 				renderer.toneMapping = THREE.ACESFilmicToneMapping;
-				container.appendChild( renderer.domElement );
+				renderer.setClearColor( 0xdeebed );
+				document.body.appendChild( renderer.domElement );
 
 				// initialize the pathtracer
 				pathTracer = new PathTracingRenderer( renderer );
@@ -103,7 +142,6 @@
 
 				// scene
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xdeebed );
 
 				controls = new OrbitControls( camera, renderer.domElement );
 				controls.addEventListener( 'change', () => {
@@ -171,12 +209,6 @@
 							const blurredEnvMap = envMapGenerator.generate( tex, 0 );
 
 							scene.environment = blurredEnvMap;
-							if ( params.backgroundType !== 'Gradient' ) {
-
-								scene.background = blurredEnvMap;
-
-							}
-
 							envMap = blurredEnvMap;
 
 						} );
@@ -202,6 +234,7 @@
 						roughness: 0.01,
 						metalness: 1,
 						map: generateRadialFloorTexture( 1024 ),
+						transparent: true,
 					} ),
 				);
 				floor.scale.setScalar( 5000 );
@@ -231,6 +264,15 @@
 
 				// add the model to the scene
 				sceneInfo = result;
+				sceneInfo.scene.traverse( c => {
+
+					if ( c.isLineSegments ) {
+
+						c.visible = false;
+
+					}
+
+				} );
 				scene.add( sceneInfo.scene );
 
 				// update the material
@@ -281,7 +323,23 @@
 				}
 
 				gui = new GUI();
+				gui.add( params, 'enable' );
+				gui.add( params, 'pause' );
+				gui.add( params, 'transparentBackground' ).onChange( v => {
+
+					pathTracer.material.backgroundAlpha = v ? 0 : 1;
+					renderer.setClearAlpha( v ? 0 : 1 );
+					pathTracer.reset();
+
+				} );
 				gui.add( params, 'resolutionScale', 0.1, 1.0 ).onChange( onWindowResize );
+				gui.add( params, 'tiles', 1, 3, 1 ).onChange( v => {
+
+					pathTracer.tiles.set( v, v );
+
+				} );
+
+				gui.add( params, 'download' );
 
 			}
 
@@ -306,7 +364,7 @@
 				if ( params.enable && delaySamples === 0 ) {
 
 					const samples = Math.floor( pathTracer.samples );
-					// samplesEl.innerText = `samples: ${ samples }`;
+					samplesEl.innerText = `samples: ${ samples }`;
 
 					pathTracer.material.materials.updateFrom( sceneInfo.materials, sceneInfo.textures );
 					// pathTracer.material.filterGlossyFactor = params.filterGlossyFactor;
@@ -324,7 +382,6 @@
 
 					}
 
-					console.log('HERE', pathTracer.samples );
 					renderer.autoClear = false;
 					fsQuad.render( renderer );
 					renderer.autoClear = true;
@@ -335,7 +392,7 @@
 
 				}
 
-				// samplesEl.innerText = `Samples: ${ Math.floor( pathTracer.samples ) }`;
+				samplesEl.innerText = `samples: ${ Math.floor( pathTracer.samples ) }`;
 
 			}
 
