Added MeshCustomNodeMaterial to test

--- a/examples/webgl_nodes_materials_standard.html
+++ b/examples/webgl_nodes_materials_standard.html
@@ -77,7 +77,39 @@
 
 				//
 
-				const material = new Nodes.MeshStandardNodeMaterial();
+				class MeshCustomNodeMaterial extends Nodes.MeshStandardNodeMaterial {
+
+					constructor() {
+
+						super();
+
+					}
+
+				}
+
+				//
+
+				const superCreateMaterialFromType = THREE.MaterialLoader.createMaterialFromType;
+
+				THREE.MaterialLoader.createMaterialFromType = function ( type ) {
+
+					const materialLib = {
+						MeshCustomNodeMaterial
+					};
+
+					if ( materialLib[ type ] !== undefined ) {
+
+						return new materialLib[ type ]();
+
+					}
+
+					return superCreateMaterialFromType.call( this, type );
+
+				};
+
+				//
+
+				const material = new MeshCustomNodeMaterial();
 
 				new OBJLoader()
 					.setPath( 'models/obj/cerberus/' )
