--- a/examples/webgl_nodes_materials_standard.html
+++ b/examples/webgl_nodes_materials_standard.html
@@ -75,7 +75,7 @@
 
 				scene.add( new THREE.HemisphereLight( 0x443333, 0x222233, 4 ) );
 
-				//
+				// Test Extended Material
 
 				class MeshCustomNodeMaterial extends Nodes.MeshStandardNodeMaterial {
 
@@ -87,7 +87,7 @@
 
 				}
 
-				//
+				// Extends Serialization Material
 
 				const superCreateMaterialFromType = THREE.MaterialLoader.createMaterialFromType;
 
