--- a/examples/webgpu_depth_texture.html
+++ b/examples/webgpu_depth_texture.html
@@ -43,7 +43,6 @@
 			const dpr = window.devicePixelRatio;
 
 			init();
-			animate();
 
 			function init() {
 
@@ -95,6 +94,7 @@
 				renderer = new WebGPURenderer();
 				renderer.setPixelRatio( dpr );
 				renderer.setSize( window.innerWidth, window.innerHeight );
+				renderer.setAnimationLoop( animate );
 				document.body.appendChild( renderer.domElement );
 
 				textureRenderer = new WebGPUTextureRenderer( renderer );
@@ -135,8 +135,6 @@
 			}
 
 			function animate() {
-
-				requestAnimationFrame( animate );
 
 				textureRenderer.render( scene, camera );
 				renderer.render( sceneFX, cameraFX );
