--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -74,7 +74,6 @@
 			let nodeEditor;
 
 			init();
-			animate();
 
 			function init() {
 
@@ -105,9 +104,10 @@
 				renderer = new WebGPURenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
-				document.body.appendChild( renderer.domElement );
+				renderer.setAnimationLoop( render );
 				renderer.outputEncoding = THREE.sRGBEncoding;
 				renderer.toneMappingNode = new Nodes.ToneMappingNode( THREE.LinearToneMapping, 4000 );
+				document.body.appendChild( renderer.domElement );
 
 				renderer.domElement.className = 'renderer';
 
@@ -203,19 +203,11 @@
 
 			//
 
-			function animate() {
-
-				requestAnimationFrame( animate );
-
-				nodeFrame.update();
-
-				render();
-
-			}
-
 			function render() {
 
 				//if ( model ) model.rotation.y = performance.now() / 5000;
+
+				nodeFrame.update();
 
 				renderer.render( scene, camera );
 
