--- a/examples/webgl_renderer_pathtracer.html
+++ b/examples/webgl_renderer_pathtracer.html
@@ -93,9 +93,9 @@
 			const params = {
 				enable: true,
 				pause: false,
-				tiles: 2,
+				tiles: 3,
 				transparentBackground: false,
-				resolutionScale: 1 / window.devicePixelRatio,
+				resolutionScale: 1,
 				download: () => {
 
 					const link = document.createElement('a');
