Updated featured projects.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,55 @@
 
 			<div id="projects">
 
+				<!-- October 2022 -->
+				<a href="https://next.junni.co.jp/" target="_blank" rel="noopener"><img src="files/projects/junni.png" loading="lazy"/></a>
+				<a href="https://www.stickittothestickman.com/" target="_blank" rel="noopener"><img src="files/projects/stickittothestickman.png" loading="lazy"/></a>
+				<a href="https://www.anumberfromtheghost.com/" target="_blank" rel="noopener"><img src="files/projects/anumberfromtheghost.png" loading="lazy"/></a>
+				<a href="https://clipdrop.co/relight" target="_blank" rel="noopener"><img src="files/projects/relight.png" loading="lazy"/></a>
+				<a href="https://www.theatrejs.com/" target="_blank" rel="noopener"><img src="files/projects/theatrejs.png" loading="lazy"/></a>
+				<a href="https://eyes.nasa.gov/apps/solar-system/" target="_blank" rel="noopener"><img src="files/projects/solar-system.png" loading="lazy"/></a>
+				<a href="https://needle.tools/" target="_blank" rel="noopener"><img src="files/projects/needle.png" loading="lazy"/></a>
+				<a href="https://nextjs.org/conf" target="_blank" rel="noopener"><img src="files/projects/nextjs.png" loading="lazy"/></a>
+				<a href="https://vrseat.vercel.app/" target="_blank" rel="noopener"><img src="files/projects/vrseat.png" loading="lazy"/></a>
+				<a href="https://neal.fun/design-the-next-iphone/" target="_blank" rel="noopener"><img src="files/projects/design-the-next-iphone.png" loading="lazy"/></a>
+				<a href="https://coastalworld.com/" target="_blank" rel="noopener"><img src="files/projects/coastalworld.png" loading="lazy"/></a>
+				<a href="https://webgi-jewelry.vercel.app/" target="_blank" rel="noopener"><img src="files/projects/webgi-jewelry.png" loading="lazy"/></a>
+				<a href="https://www.google.com/doodles/celebrating-petanque" target="_blank" rel="noopener"><img src="files/projects/celebrating-petanque.png" loading="lazy"/></a>
+				<a href="https://virtual.bbcmic.ro/?disc1=elite.ssd&autoboot" target="_blank" rel="noopener"><img src="files/projects/bbcmicro.png" loading="lazy"/></a>
+				<a href="https://camera-webgi.vercel.app/" target="_blank" rel="noopener"><img src="files/projects/camera-webgi.png" loading="lazy"/></a>
+				<a href="https://annoyingmuseum.zendesk.com/" target="_blank" rel="noopener"><img src="files/projects/annoyingmuseum.png" loading="lazy"/></a>
+				<a href="https://capsule.dior.com/dioriviera-2022/" target="_blank" rel="noopener"><img src="files/projects/dioriviera-2022.png" loading="lazy"/></a>
+				<a href="https://www.kubota.com/futurecube/" target="_blank" rel="noopener"><img src="files/projects/futurecube.png" loading="lazy"/></a>
+				<a href="https://hsmkrt1996.com/" target="_blank" rel="noopener"><img src="files/projects/hsmkrt1996.png" loading="lazy"/></a>
+				<a href="https://choochooworld.com/" target="_blank" rel="noopener"><img src="files/projects/choochooworld.png" loading="lazy"/></a>
+				<a href="https://leap-for-mankind.com/" target="_blank" rel="noopener"><img src="files/projects/leap-for-mankind.png" loading="lazy"/></a>
+				<a href="https://henryheffernan.com/" target="_blank" rel="noopener"><img src="files/projects/henryheffernan.png" loading="lazy"/></a>
+				<a href="https://www.pola.co.jp/wecaremore/mothersday/" target="_blank" rel="noopener"><img src="files/projects/mothersday.png" loading="lazy"/></a>
+				<a href="https://david-hckh.com/" target="_blank" rel="noopener"><img src="files/projects/david-hckh.png" loading="lazy"/></a>
+				<a href="https://jujutsukaisen.dolcegabbana.com/" target="_blank" rel="noopener"><img src="files/projects/jujutsukaisen.png" loading="lazy"/></a>
+				<a href="https://fungui.resn.co.nz/" target="_blank" rel="noopener"><img src="files/projects/fungui.png" loading="lazy"/></a>
+				<a href="https://nodetoy.co/" target="_blank" rel="noopener"><img src="files/projects/nodetoy.png" loading="lazy"/></a>
+				<a href="https://jesse-zhou.com/" target="_blank" rel="noopener"><img src="files/projects/jesse-zhou.png" loading="lazy"/></a>
+				<a href="https://exp-infinite-passerella.lusion.co/" target="_blank" rel="noopener"><img src="files/projects/exp-infinite-passerella.png" loading="lazy"/></a>
+				<a href="https://windland-neotix.vercel.app/" target="_blank" rel="noopener"><img src="files/projects/windland-neotix.png" loading="lazy"/></a>
+				<a href="https://polygonjs.com/" target="_blank" rel="noopener"><img src="files/projects/polygonjs.png" loading="lazy"/></a>
+				<a href="https://sougen.co/" target="_blank" rel="noopener"><img src="files/projects/sougen.png" loading="lazy"/></a>
+				<a href="https://lab.julienverneaut.com/matcap-editor/" target="_blank" rel="noopener"><img src="files/projects/matcap-editor.png" loading="lazy"/></a>
+				<a href="https://exp-gemini.lusion.co/" target="_blank" rel="noopener"><img src="files/projects/exp-gemini.png" loading="lazy"/></a>
+				<a href="https://exp-my-little-storybook.lusion.co/" target="_blank" rel="noopener"><img src="files/projects/exp-my-little-storybook.png" loading="lazy"/></a>
+				<a href="https://www.youtube.com/watch?v=bSMZgXzC9AA" target="_blank" rel="noopener"><img src="files/projects/devaslife.png" loading="lazy"/></a>
+				<a href="https://madbox.io/" target="_blank" rel="noopener"><img src="files/projects/madbox.png" loading="lazy"/></a>
+				<a href="https://www.penzil.app/" target="_blank" rel="noopener"><img src="files/projects/penzil.png" loading="lazy"/></a>
+				<a href="https://www.lamborghini.com/en-en/3d" target="_blank" rel="noopener"><img src="files/projects/lamborghini.png" loading="lazy"/></a>
+				<a href="https://market.pmnd.rs/" target="_blank" rel="noopener"><img src="files/projects/market.png" loading="lazy"/></a>
+				<a href="https://ifcjs.github.io/info/" target="_blank" rel="noopener"><img src="files/projects/ifcjs.png" loading="lazy"/></a>
+				<a href="https://pendereckisgarden.pl/en" target="_blank" rel="noopener"><img src="files/projects/pendereckisgarden.png" loading="lazy"/></a>
+				<a href="https://rogueengine.io/" target="_blank" rel="noopener"><img src="files/projects/rogueengine.png" loading="lazy"/></a>
+				<a href="https://logartis.info/" target="_blank" rel="noopener"><img src="files/projects/logartis.png" loading="lazy"/></a>
+				<a href="https://blobmixer.14islands.com/" target="_blank" rel="noopener"><img src="files/projects/blobmixer.png" loading="lazy"/></a>
+				<a href="https://pioupiou.wmapan.com/" target="_blank" rel="noopener"><img src="files/projects/pioupiou.png" loading="lazy"/></a>
+				<a href="http://spite.github.io/fuck-2020/" target="_blank" rel="noopener"><img src="files/projects/f*mmxx.png" loading="lazy"/></a>
+				<a href="https://unshift.jp/" target="_blank" rel="noopener"><img src="files/projects/unshift.png" loading="lazy"/></a>
 				<!-- February 2021 -->
 				<a href="https://eyes.nasa.gov/apps/mars2020/" target="_blank" rel="noopener"><img src="files/projects/mars2020.png" loading="lazy"/></a>
 				<!-- January 2021 -->
@@ -126,7 +175,7 @@
 				<a href="https://www.procedural.eu/" target="_blank" rel="noopener"><img src="files/projects/procedural-gl.png" loading="lazy"/></a>
 				<a href="https://www.kodeclubs.com/" target="_blank" rel="noopener"><img src="files/projects/kodeclubs.png" loading="lazy"/></a>
 				<a href="https://www.midwam.com/en" target="_blank" rel="noopener"><img src="files/projects/midwam.png" loading="lazy"/></a>
-				<a href="https://billie.withyoutube.com/" target="_blank" rel="noopener"><img src="files/projects/billie.png" loading="lazy"/></a>
+				<!-- <a href="https://billie.withyoutube.com/" target="_blank" rel="noopener"><img src="files/projects/billie.png" loading="lazy"/></a> -->
 				<a href="https://www.oculus.com/medal-of-honor/" target="_blank" rel="noopener"><img src="files/projects/medal-of-honor.png" loading="lazy"/></a>
 				<a href="https://chartogne-taillet.com/en" target="_blank" rel="noopener"><img src="files/projects/chartogne-taillet.png" loading="lazy"/></a>
 				<a href="https://3dcomic.shop/inkbots/s01e01/" target="_blank" rel="noopener"><img src="files/projects/inkbots.png" loading="lazy"/></a>
